@@ -1,4 +1,8 @@
 
+2017-09-22  Edward Hart <edward.dan.hart@gmail.com>
+
+	* typeck.c (cb_set_intr_when_compiled): fixed timezone printf format.
+
 2017-09-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* cobc.c: ensure correct order of the programs during processing
